<resources>
    <string name="app_name">LikingApp</string>

    <!-- label -->
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="do_registry">Registre-se</string>
    <string name="register_access">acessar cadastro</string>
    <string name="gallery_access">acessar galeria</string>
    <string name="register_data">Dados Cadastrais</string>
    <string name="avatar_label">Avatar</string>
    <string name="birth_date">Data de Nascimento</string>
    <string name="telephone">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="e_mail">E-mail</string>
    <string name="birth_date_hint">__-__-____</string>
    <string name="telephone_hint">(__) _____-____</string>
    <string name="cpf_hint">___.___.___-__</string>
    <string name="register_user">Cadastrar Usuário</string>
    <string name="confirm">confirmar</string>
    <string name="label_info_login_password">login: %s</string>
    <string name="label_welcome_user">Olá, %s</string>
    <string name="select">selecionar</string>
    <string name="save_credentials">Salvar Credenciais</string>
    <string name="search">Pesquisar</string>
    <string name="back">voltar</string>
    <string name="people">Pessoas</string>
    <string name="my_list">minha lista</string>
    <string name="label_list_super_heroes">Minha lista de Super heróis</string>
    <string name="register">cadastrar</string>
    <string name="quantity_comics">comics: %d</string>
    <string name="greatest_quantity_comics">comics: more than 20</string>
    <string name="no_description">no description</string>
    <string name="api_error">Ops! Parece que um vilão bloqueou a conexão!</string>
    <string name="successfuly_save_super_hero">Personagem salvo na sua lista de likes!</string>
    <string name="comics">comics</string>
    <string name="events">eventos</string>
    <string name="stories">histórias</string>
    <string name="series">séries</string>

    <!-- treatment -->
    <string name="cpf_already_exists">CPF já cadastrado!</string>
    <string name="something_is_wrong">Algo não deu certo!</string>
    <string name="invalid_email">O email não pode ser vazio!</string>
    <string name="successfuly_save_data">E-mail registrado!</string>
    <string name="caught_invalid_input">Há dados não preenchidos corretamente!</string>

    <!-- image -->
    <string name="facebook_icon_description">facebook icon</string>
    <string name="logo_description">logo</string>
    <string name="gmail_icon_description">gmail icon</string>
    <string name="add_descryption">adicionar</string>
</resources>