<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/button_color_one"
                android:visibility="gone">


            </RelativeLayout>

            <ImageView
                android:layout_width="207dp"
                android:layout_height="207dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/logo_description"
                android:src="@mipmap/logo_transparent_foreground" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/container_auth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/container_social_midia"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/greatest_label_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register_data" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/edit_text_name"
                                style="@style/edit_text_style"
                                android:layout_width="0dp"
                                android:layout_marginEnd="10dp"
                                android:layout_weight="1"
                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                                android:hint="@string/name"
                                android:inputType="textCapWords"
                                tools:ignore="Autofill" />

                            <EditText
                                android:id="@+id/edit_text_last_name"
                                style="@style/edit_text_style"
                                android:layout_width="0dp"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                                android:hint="@string/last_name"
                                android:inputType="text"
                                tools:ignore="Autofill" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/label_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login" />

                        <EditText
                            android:id="@+id/login"
                            style="@style/edit_text_style"
                            android:layout_width="match_parent"
                            android:hint="@string/login"
                            android:inputType="textNoSuggestions"
                            tools:ignore="Autofill" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/label_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password" />

                        <EditText
                            android:id="@+id/password"
                            style="@style/edit_text_style"
                            android:layout_width="match_parent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            tools:ignore="Autofill" />

                    </LinearLayout>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/save_credentials"
                        style="@style/label_style"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginTop="8dp"
                        android:buttonTint="@color/secondary_color"
                        android:text="@string/save_credentials" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_social_midia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@id/container_button"
                    app:layout_constraintTop_toBottomOf="@id/container_auth">

                    <TextView
                        style="@style/label_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/do_registry" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="6dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/proceed_to_facebook_registration"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"
                            android:alpha="0.65"
                            android:contentDescription="@string/facebook_icon_description"
                            android:src="@mipmap/ic_facebook" />

                        <ImageView
                            android:id="@+id/proceed_to_gmail_registration"
                            android:layout_width="73dp"
                            android:layout_height="68dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="10dp"
                            android:alpha="0.65"
                            android:contentDescription="@string/gmail_icon_description"
                            android:src="@mipmap/ic_gmail_foreground" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <LinearLayout
                        android:id="@+id/proceed_to_registering"
                        android:layout_width="match_parent"
                        android:layout_height="41dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/rounded_button_shadow"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/button_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/register_access" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/proceed_to_gallery"
                        android:layout_width="match_parent"
                        android:layout_height="41dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/rounded_button_shadow"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/button_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/gallery_access" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

</layout>