<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".model_view_controller.list_super_hero.ListSuperHeroActivity">

    <data />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/edit_text_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:background="@color/primary_color"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/label_welcome_user"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="23dp"
                    android:text="@string/label_welcome_user"
                    android:textColor="@color/label_color" />

                <TextView
                    android:id="@+id/label_login"
                    style="@style/greatest_label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:alpha="0.5"
                    android:text="@string/label_info_login_password" />

                <TextView
                    android:id="@+id/label_email"
                    style="@style/greatest_label_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:alpha="0.5"
                    android:text="@string/label_info_login_password" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/border_search_container">

                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="43dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="@string/search"
                        android:src="@drawable/ic_search_24" />

                </LinearLayout>

                <EditText
                    android:id="@+id/search_super_hero"
                    style="@style/edit_text_style"
                    android:layout_width="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:hint="@string/search"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    tools:ignore="Autofill">

                </EditText>

            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/recycler_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                android:visibility="visible">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/super_hero_adapter" />

            </androidx.core.widget.NestedScrollView>

            <include layout="@layout/loading_component"
                android:id="@+id/loading_component"
                android:layout_marginBottom="120dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent" />

            <LinearLayout
                android:id="@+id/container_error_request"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_marginBottom="120dp">

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:alpha="0.6"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/logo_description"
                    android:src="@mipmap/carnage_foreground" />

                <TextView
                    style="@style/greatest_label_style"
                    android:layout_width="180dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/api_error" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/corner_radius_at_top"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/proceed_to_registering"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_shadow"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/my_list" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_go_back"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button_shadow"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/back" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</layout>